--- a/config.org
+++ b/config.org
@@ -497,6 +497,10 @@
   (use-package smex :ensure t)
 #+end_src
 
+** General.el 
+#+BEGIN_SRC emacs-lisp
+(use-package general :ensure t)
+#+END_SRC
 ** Org
 Part below can be used to get a more recent version of org mode
 #+begin_src emacs-lisp
@@ -1281,8 +1285,6 @@ Then run =lsp-cquery-enable= when in a c/c++ file (or add hook).
 
 ** General.el
 #+begin_src emacs-lisp
-    (use-package general :ensure t
-      :config
       (general-define-key
        ;; replace default keybindings
        :states '(normal emacs)
