Deactivate abbrev mode

--- a/config.org
+++ b/config.org
@@ -69,7 +69,8 @@
 (set-display-table-slot standard-display-table 0 ?\ ) 
 (set-display-table-slot standard-display-table 'wrap ?\ )
 (setq-default indent-tabs-mode nil)
-(setq abbrev-file-name "~/.emacs.d/abbrev_defs")
+(abbrev-mode -1)
+;;(setq abbrev-file-name "~/.emacs.d/abbrev_defs")
 (mapc
  (lambda (face)
    (set-face-attribute face nil :weight 'normal :underline nil))
@@ -1422,7 +1423,6 @@ Then run =lsp-cquery-enable= when in a c/c++ file (or add hook).
        "oq" '(org-capture :which-key "quick capture")
        )
 
-      )
 #+end_src
 
 
