--- a/config.org
+++ b/config.org
@@ -220,7 +220,9 @@
 
   ;; (cond ((string-equal answer "c") (load-theme 'base16-material))
   (cond ((string-equal answer "c")
-         (progn (load-theme 'creamsody)
+         (progn
+           (use-package creamsody-theme :ensure t)
+           (load-theme 'creamsody)
                 (creamsody-modeline-four)
                 (set-face-attribute 'mode-line-inactive nil
                                     :foreground (face-attribute 'creamsody-modeline-two-inactive :foreground)
