--- a/config.org
+++ b/config.org
@@ -993,10 +993,10 @@ Add org-bullets for nice icons instead of stars
   ;(setq dashboard-startup-banner (expand-file-name "emacs-logo.png"
                                                    ;user-emacs-directory))
   (setq dashboard-items '((recents  . 5)
-                          ;;(bookmarks . 5)
-                          (projects . 5)
-                          (agenda . 5)
-                          (registers . 5)))
+                          (bookmarks . 5)
+                          ;;(registers . 5)
+                          ;;(agenda . 5)
+                          (projects . 5)))
   (set-face-attribute 'widget-button nil :underline nil)
   )
 ;; (add-hook 'dashboard-mode-hook
