--- a/config.org
+++ b/config.org
@@ -1124,8 +1124,8 @@ Display horizontal lines instead of ugly characters
       )
 
       (add-hook 'pdf-view-mode-hook 'auto-revert-mode)
-      (add-hook 'pdf-view-mode-hook (lambda () (linum-relative-mode -1)))
-      (add-hook 'pdf-view-mode-hook (lambda () (linum-mode -1)))
+;      (add-hook 'pdf-view-mode-hook (lambda () (linum-relative-mode -1)))
+;      (add-hook 'pdf-view-mode-hook (lambda () (linum-mode -1)))
       (add-hook 'pdf-view-mode-hook (lambda () (beacon-mode -1)))
       (evil-define-key 'normal pdf-occur-buffer-mode-map
         (kbd "<return>") 'pdf-occur-goto-occurrence)
