Replace linum rel with nlinum rel

--- a/config.org
+++ b/config.org
@@ -1485,7 +1485,7 @@ Then run =lsp-cquery-enable= when in a c/c++ file (or add hook).
 ;;(add-hook 'prog-mode-hook 'highlight-indentation-mode)
 (add-hook 'prog-mode-hook 'winner-mode)
 (add-hook 'prog-mode-hook 'rainbow-delimiters-mode)
-(add-hook 'prog-mode-hook 'linum-relative-mode)
+(add-hook 'prog-mode-hook 'nlinum-relative-mode)
 ;;(add-hook 'prog-mode-hook 'whitespace-mode)
 (add-hook 'prog-mode-hook 'show-paren-mode)
 (add-hook 'prog-mode-hook 'hl-line-mode)
@@ -1747,7 +1747,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
     (diminish 'abbrev-mode)
     (diminish 'yas-minor-mode)
     (diminish 'line-number-mode)
-    (diminish 'linum-relative-mode)
+    (diminish 'nlinum-relative-mode)
     (diminish 'undo-tree-mode)
     (diminish 'eldoc-mode)
     (diminish 'tide-mode)
