Allow context popup menu to open from right click

--- a/config.org
+++ b/config.org
@@ -1829,7 +1829,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
   (advice-add 'company-pseudo-tooltip-unhide :before #'pre-popup-draw)
   (advice-add 'company-pseudo-tooltip-hide :after #'post-popup-draw)
   ;(set-cursor-color "#7B1FA2")
-
+(global-set-key [mouse-3] 'mouse-popup-menubar-stuff)
   
 
 #+END_SRC
